# crate-report

./: Cargo.toml  README.md  action.yml  rustfmt.toml
.github/workflows/: example-usage.yml  release.yml  safety-check.yml  wiki-update.yml
src/: bool_candidates.rs  html.rs  main.rs  safe_candidates.rs
test_samples/: Cargo.toml  bool_candidates_test.rs
