[package]
name = "crate-report"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = { version = "3.0",     features = [] }
csv     = { version = "1.3.1",   features = [] }
rayon = "1.10.0"
syn     = { version = "2.0.104", features = ["full", "visit"] }
tokio = { version = "1.47.0", features = ["full"] }
walkdir = { version = "2.5.0",   features = [] }

[profile.release]
debug = true
