[package]
name = "crate-report"
version = "0.9.0"
edition = "2024"

[dependencies]
clap    = { version = "4.5",     features = ["derive"] }
colored = { version = "3.0",     features = [] }
csv     = { version = "1.3.1",   features = [] }
rayon   = { version = "1.11.0",  features = [], optional = true }
syn     = { version = "2.0.106", features = ["full", "visit"] }
walkdir = { version = "2.5.0",   features = [] }

[features]
rayon = ["dep:rayon"]
